--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
+}
 .App {
   display: flex;
   height: 100vh;
@@ -36,4 +40,21 @@
   text-decoration: none;
   color: #13d0d1;
   font-size: 25px;
+}
+
+.cv-details-section {
+  box-shadow: 5px 5px 10px lightgray;
+  padding: 50px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+.cv-info {
+  font-size: 25px;
+  font-family: "Oswald", sans-serif;
+}
+.bottom-hr {
+  border-bottom: 1px solid lightgrey;
+}
+.cv-label {
+  font-weight: 900;
 }
